--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,12 @@ layout: default
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
       </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      {%- if page.author.name and page.author.url -%}
+      • <a href="{{ page.author.url }}">
+          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+            <span class="p-author h-card" itemprop="name">{{ page.author.name }}</span>
+          </span>
+        </a>
       {%- endif -%}</p>
   </header>
 
